<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SCOREB"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableRow>
        <TextView
        android:id="@+id/SCOREKEEPINGAPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A"
            style = "@style/Label"
        app:layout_constraintBottom_toTopOf="@+id/TEAMA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </TableRow>
    <TableRow>
        <TextView
        android:id="@+id/TEAMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/B"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/SCORE"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/SCOREA"
            app:layout_constraintBottom_toTopOf="@+id/INCREASEBUTTON"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/DECREASEBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SCORE1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/INCREASEBUTTON" />


        <Button
            android:id="@+id/INCREASEBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SCORE"
            app:layout_constraintBottom_toTopOf="@+id/DECREASEBUTTON"
            app:layout_constraintEnd_toEndOf="parent" />


    </TableRow>
    <TableRow>
    <TextView
        android:id="@+id/TEAMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TEAMB"
        app:layout_constraintEnd_toEndOf="parent"/>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SCOREB"
            app:layout_constraintBottom_toTopOf="@+id/PLUSBUTTON"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DECREASEBUTTON" />
        <Button
            android:id="@+id/MINUSBUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SCORE1"
            app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id= "@+id/PLUSBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SCORE"/>
    </TableRow>
    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/noRoundingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="INCREMENTBY1" />
        <RadioButton
            android:id="@+id/noRoundingRadioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INCREMENTBY2" />
        <RadioButton
            android:id="@+id/noRoundingRadioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INCREMENTBY3" />

    </RadioGroup>


</TableLayout>